// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`archive pack-patch refusals should refuse a destination already holding the set 1`] = `
{
  "exitCode": 1,
  "stderr": [
    "Error: Invalid error: Destination '<sandbox>/occupied' already holds 1 volume(s) of the archive set 'patch.db': patch.db. Packing replaces them and cannot put them back if it fails partway, so publishing over them has to be asked for.",
  ],
  "stdout": [
    "Patch input: <sandbox>/base",
    "Patch target: <sandbox>/target",
    "Patch destination: <sandbox>/occupied",
  ],
}
`;

exports[`archive pack-patch refusals should refuse a destination inside a compared root 1`] = `
{
  "exitCode": 1,
  "stderr": [
    "Error: Invalid error: Destination '<sandbox>/base/patches' is inside the base root '<sandbox>/base'. A patch written into a tree it compares becomes part of that tree, so the next run would read this run's own output as a difference. Write it elsewhere and copy it in.",
  ],
  "stdout": [
    "Patch input: <sandbox>/base",
    "Patch target: <sandbox>/target",
    "Patch destination: <sandbox>/base/patches",
  ],
}
`;

exports[`archive pack-patch refusals should refuse a scope that matches nothing 1`] = `
{
  "exitCode": 1,
  "stderr": [
    "Error: Invalid error: The comparison scope matched no entry on the base side ('<sandbox>/base'). A scope naming nothing on one side makes every entry of the other a difference.",
  ],
  "stdout": [
    "Patch input: <sandbox>/base",
    "Patch target: <sandbox>/target",
  ],
}
`;

exports[`archive pack-patch refusals should refuse a side that holds no entry 1`] = `
{
  "exitCode": 1,
  "stderr": [
    "Error: Invalid error: The base root '<sandbox>/hollow' holds no entry to compare. Every entry of the other side would become a difference, which is not a comparison.",
  ],
  "stdout": [
    "Patch input: <sandbox>/hollow",
    "Patch target: <sandbox>/target",
  ],
}
`;
